--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_USER=sa
-DB_PASSWORD=YourStrong!Passw0rd
-DB_HOST=localhost
-DB_NAME=NotesApp
 PORT=5000
+SQL_SERVER=sqlserver
+SQL_USER=sa
+SQL_PASSWORD=YourStrong!Pass123
+SQL_DATABASE=NotesDB
