--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "backend",
+  "name": "notes-backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
