--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,17 @@ services:
     networks:
       - notes-network
 
+  frontend:
+    build: ./frontend
+    container_name: notes-frontend
+    restart: always
+    ports:
+      - "5173:5173"
+    networks:
+      - notes-network
+    depends_on:
+      - backend
+
 networks:
   notes-network:
     driver: bridge
