--- a/backend/models/package.json
+++ b/backend/models/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "models",
+  "name": "notes-backend",
   "version": "1.0.0",
-  "main": "db.js",
+  "type": "module",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests\" && exit 0"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mssql": "^12.0.0",
+    "mysql2": "^3.15.3",
+    "sanitize-html": "^2.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
