-  deleted docker files to prepare to switch to mongo

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,6 @@ SQL_USER=sa
 SQL_PASSWORD=Mynoteswebapp27
 SQL_DATABASE=NotesDB
 DB_HOST=localhost
+MONGO_URI=mongodb://127.0.0.1:27017/myNotesDB
+JWT_SECRET=secret123
 
