--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "mongoose": "^7.5.0",
-    "sanitize-html": "^2.10.0",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "morgan": "^1.10.1",
     "mssql": "^12.0.0",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "sanitize-html": "^2.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
