--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,4 @@
 PORT=5000
-SQL_SERVER=sqlserver
-SQL_USER=sa
-SQL_PASSWORD=Mynoteswebapp27
-SQL_DATABASE=NotesDB
-DB_HOST=localhost
-MONGO_URI=mongodb://127.0.0.1:27017/myNotesDB
+MONGO_URI=mongodb+srv://MyNotesDB:jpKcFRgzfmfoStS8@mynoteswebapp.m8ivge8.mongodb.net/?appName=MyNotesWebApp
 JWT_SECRET=secret123
 
