--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,10 @@ jobs:
         run: npm install
         working-directory: ./backend
 
+      - name: Run backend tests
+        run: npm test
+        working-directory: ./backend
+
       - name: Backend build (if exists)
         run: |
           if [ -f package.json ]; then
@@ -37,6 +41,11 @@ jobs:
         run: npm install
         working-directory: ./frontend
 
+      - name: Run frontend tests
+        run: npm test --watchAll=false
+        working-directory: ./frontend
+
       - name: Build frontend
         run: npm run build
         working-directory: ./frontend
+
