--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI
 
 on:
   push:
@@ -7,45 +7,32 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: [18.x]
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: 'npm'
-
-      # -------- BACKEND --------
+          node-version: ${{ matrix.node-version }}
       - name: Install backend dependencies
         run: npm install
-        working-directory: ./backend
-
       - name: Run backend tests
-        run: npm test
-        working-directory: ./backend
-
-      - name: Backend build (if exists)
-        run: |
-          if [ -f package.json ]; then
-            npm run build --if-present
-          fi
-        working-directory: ./backend
-
-      # -------- FRONTEND --------
+        run: npm run test
       - name: Install frontend dependencies
+        working-directory: ./frontend
         run: npm install
-        working-directory: ./frontend
-
       - name: Run frontend tests
-        run: npm test --watchAll=false
         working-directory: ./frontend
+        run: npm run test
+      - name: Run Cypress E2E tests
+        uses: cypress-io/github-action@v5
+        with:
+          start: npm start
+          wait-on: http://localhost:3000
+          wait-on-timeout: 60
 
-      - name: Build frontend
-        run: npm run build
-        working-directory: ./frontend
 
