--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,27 +12,41 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
+
     steps:
       - uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
+      # ✅ BACKEND
       - name: Install backend dependencies
+        working-directory: ./backend
         run: npm install
+
       - name: Run backend tests
+        working-directory: ./backend
         run: npm run test
+
+      # ✅ FRONTEND
       - name: Install frontend dependencies
         working-directory: ./frontend
         run: npm install
+
       - name: Run frontend tests
         working-directory: ./frontend
         run: npm run test
+
+      # ⚠️ CYPRESS
       - name: Run Cypress E2E tests
         uses: cypress-io/github-action@v5
         with:
+          working-directory: ./frontend
           start: npm start
           wait-on: http://localhost:3000
           wait-on-timeout: 60
+
 
 
