--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "start": "node server.js",
     "dev": "nodemon server.js"
+    
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+    "nodemon": "^3.1.10",
+    "jest": "^29.x"
+}
+
 }
