--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,17 @@
+# Dependencies
+node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Test coverage
+coverage/
+
+# Logs
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
