--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-      
     "start": "node server.js",
-    "dev": "nodemon server.js"
-    
+    "dev": "nodemon server.js",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ci": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,10 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "vitest": "^2.1.8",
+    "@vitest/coverage-v8": "^2.1.8",
+    "supertest": "^7.0.0",
+    "mongodb-memory-server": "^10.1.5"
   }
 }
