--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,14 @@ jobs:
   backend-tests:
     name: Backend Tests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: ['20']
     
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '20'
           cache: npm
           cache-dependency-path: backend/package-lock.json
       
@@ -41,17 +38,14 @@ jobs:
   frontend-tests:
     name: Frontend Tests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: ['20']
     
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '20'
           cache: npm
           cache-dependency-path: frontend/package-lock.json
       
