--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
   "outputDirectory": "frontend/build",
   "builds": [
     {
+      "src": "frontend/build/**",
+      "use": "@vercel/static"
+    },
+    {
       "src": "api/index.js",
       "use": "@vercel/node"
     }
@@ -14,8 +18,16 @@
       "dest": "/api/index.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/static/(.*)",
+      "dest": "/frontend/build/static/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2|eot|ttf|otf))",
       "dest": "/frontend/build/$1"
+    },
+    {
+      "src": "/.*",
+      "dest": "/frontend/build/index.html"
     }
   ]
 }
