--- a/vercel.json
+++ b/vercel.json
@@ -2,32 +2,14 @@
   "version": 2,
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/build",
-  "builds": [
-    {
-      "src": "frontend/build/**",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    }
-  ],
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "/api/index.js"
     },
     {
-      "src": "/static/(.*)",
-      "dest": "/frontend/build/static/$1"
-    },
-    {
-      "src": "/(.*\\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2|eot|ttf|otf))",
-      "dest": "/frontend/build/$1"
-    },
-    {
-      "src": "/.*",
-      "dest": "/frontend/build/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
