--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
   "version": 2,
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/build",
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
@@ -9,23 +15,23 @@
     },
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "/frontend/build/static/$1"
     },
     {
       "src": "/manifest.json",
-      "dest": "/manifest.json"
+      "dest": "/frontend/build/manifest.json"
     },
     {
       "src": "/robots.txt",
-      "dest": "/robots.txt"
+      "dest": "/frontend/build/robots.txt"
     },
     {
       "src": "/favicon.ico",
-      "dest": "/favicon.ico"
+      "dest": "/frontend/build/favicon.ico"
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/frontend/build/index.html"
     }
   ]
 }
