--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && npm install && npm run build",
+  "buildCommand": "cd frontend && npm install && npm run build && cd ../backend && npm install",
   "outputDirectory": "frontend/build",
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
@@ -16,6 +15,10 @@
     {
       "src": "/static/(.*)",
       "dest": "/frontend/build/static/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2|eot|ttf|otf))",
+      "dest": "/frontend/build/$1"
     },
     {
       "src": "/manifest.json",
