--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "mysql2": "^3.15.3",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
-    "sanitize-html": "^2.10.0"
+    "sanitize-html": "^2.10.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@ljharb/tsconfig": "^0.3.2",
