--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "vercel-build": "react-scripts build",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:ci": "vitest run --coverage",
