--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
+    "build": "echo \"Backend has no build step; use npm run start or npm run dev\"",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "vitest",
