--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,6 @@
     "nodemailer": "^7.0.11"
   },
   "scripts": {
-    "build": "cd ../frontend && npm install && npm run build"
+    "build": "cd ../frontend && npm install && npm run build && cd ../api"
   }
 }
