--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,10 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && npm install && npm run build",
+  "buildCommand": "cd frontend && npm install && npm run build && cd ../api && mkdir -p public && cp -r ../frontend/build/* public/",
   "builds": [
     {
       "src": "api/index.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": "frontend/build/**"
-      }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
