Fix vercel.json schema - remove invalid root property

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "version": 2,
-  "root": "frontend",
-  "buildCommand": "npm install && npm run build",
+  "buildCommand": "cd frontend && npm install && npm run build",
   "builds": [
     {
-      "src": "package.json",
+      "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "build"
