--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -123,40 +123,3 @@ jobs:
           echo "Integration tests would run here"
           # Add your integration test commands here
 
-  build:
-    name: Build & Deploy
-    runs-on: ubuntu-latest
-    needs: [integration-tests]
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
-      
-      - name: "Debug: show Node/npm versions"
-        run: |
-          node -v
-          npm -v
-      
-      - name: Install frontend dependencies
-        working-directory: ./frontend
-        run: |
-          rm -rf node_modules package-lock.json
-          npm install --no-audit --no-fund
-      
-      - name: Build frontend
-        working-directory: ./frontend
-        run: npm run build
-      
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-build
-          path: frontend/build/
-          retention-days: 7
