Fix MONGO_URI in .env to include database name

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://MyNotesDB:jpKcFRgzfmfoStS8@mynoteswebapp.m8ivge8.mongodb.net/?appName=MyNotesWebApp
+MONGO_URI=mongodb+srv://MyNotesDB:jpKcFRgzfmfoStS8@mynoteswebapp.m8ivge8.mongodb.net/myNotesDB?appName=MyNotesWebApp
 JWT_SECRET=secret123
 
 # Email Configuration for Reminder Notifications
